--- a/index.html
+++ b/index.html
@@ -11,26 +11,10 @@
     <div class="header">
         <h1> header </h1>
     </div>
-    <div class="nav">
-        <h1> nav </h1>
-    </div>
+    
     <div class="content">
-        <div class="left">
-            <div class="section">
-        <h1> section </h1>
-            </div>
-            <div class="article">
-        <h1> article </h1>
-            </div>
-        </div>
-        <div class="right">
-         <div class="aside"> 
-             <h1> aside </h1>
-         </div>
-        </div>
+        <h1> content </h1>
     </div>
-    <div class="footer">
-        <h1> footer </h1>
-    </div>
-</body>
-</html>
+        <div class="footer">
+            <h1> footer </h1>
+        </div>
