--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="header">
-        <h1> header </h1>
+    <div class="menu">
+        <h1> menu </h1>
     </div>
-    
-    <div class="content">
-        <h1> content </h1>
-    </div>
+    <div class="page">
+        <div class="header">
+            <h1> header </h1>
+        </div>
+        <div class=" content">
+            <h1> content </h1>
+        </div>
         <div class="footer">
             <h1> footer </h1>
         </div>
+    </div>
+</body>
+</html>
